fix overflow

--- a/css/lmf.css
+++ b/css/lmf.css
@@ -236,6 +236,7 @@ h2 {
 
 .partner img {
     border: 1px solid #d90429;
+    overflow: show;
 }
 
 .partner video {
